# apps/appstore/lib/Controller/ApiController.php
@@ -43,17 +43,17 @@ class ApiController extends OCSController {
 
 	public function __construct(
 		IRequest $request,
-		private IConfig $config,
-		private IAppConfig $appConfig,
-		private AppManager $appManager,
-		private DependencyAnalyzer $dependencyAnalyzer,
-		private CategoryFetcher $categoryFetcher,
-		private AppFetcher $appFetcher,
-		private IFactory $l10nFactory,
-		private BundleFetcher $bundleFetcher,
-		private Installer $installer,
-		private IRegistry $subscriptionRegistry,
-		private LoggerInterface $logger,
+		private readonly IConfig $config,
+		private readonly IAppConfig $appConfig,
+		private readonly AppManager $appManager,
+		private readonly DependencyAnalyzer $dependencyAnalyzer,
+		private readonly CategoryFetcher $categoryFetcher,
+		private readonly AppFetcher $appFetcher,
+		private readonly IFactory $l10nFactory,
+		private readonly BundleFetcher $bundleFetcher,
+		private readonly Installer $installer,
+		private readonly IRegistry $subscriptionRegistry,
+		private readonly LoggerInterface $logger,
 	) {
 		parent::__construct(Application::APP_ID, $request);
 	}
@@ -70,18 +70,18 @@ class ApiController extends OCSController {
 		$currentLanguage = substr($this->l10nFactory->findLanguage(), 0, 2);
 
 		$categories = $this->categoryFetcher->get();
-		$categories = array_map(fn ($category) => [
+		$categories = array_map(fn (array $category): array => [
 			'id' => $category['id'],
 			'displayName' => $category['translations'][$currentLanguage]['name'] ?? $category['translations']['en']['name'],
 		], $categories);
 
-		return new DataResponse(array_values($categories));
+		return new DataResponse($categories);
 	}
 
 	/**
 	 * Get all available apps
 	 *
-	 * @return DataResponse<Http::STATUS_OK, list<array{id: string, name: string, description: string, ...}>, array{}>
+	 * @return DataResponse<Http::STATUS_OK, list<array{id: string, name: string, groups: list<string>, internal: bool, isCompatible: bool, missingDependencies?: list<string>, missingMaxNextcloudVersion: bool, missingMinNextcloudVersion: bool, ...<array-key, mixed>}>, array{}>
 	 *
 	 * 200: The apps were found successfully
 	 */
@@ -89,6 +89,7 @@ class ApiController extends OCSController {
 	public function listApps(): DataResponse {
 		$apps = $this->getAllApps();
 
+		/** @var array<string>|mixed $ignoreMaxApps */
 		$ignoreMaxApps = $this->config->getSystemValue('app_install_overwrite', []);
 		if (!is_array($ignoreMaxApps)) {
 			$this->logger->warning('The value given for app_install_overwrite is not an array. Ignoring...');
@@ -96,7 +97,7 @@ class ApiController extends OCSController {
 		}
 
 		// Extend existing app details
-		$apps = array_map(function (array $appData) use ($ignoreMaxApps) {
+		$apps = array_map(function (array $appData) use ($ignoreMaxApps): array {
 			if (isset($appData['appstoreData'])) {
 				$appstoreData = $appData['appstoreData'];
 				$appData['screenshot'] = $this->createProxyPreviewUrl($appstoreData['screenshots'][0]['url'] ?? '');
@@ -105,7 +106,7 @@ class ApiController extends OCSController {
 			}
 
 			$newVersion = $this->installer->isUpdateAvailable($appData['id']);
-			if ($newVersion) {
+			if ($newVersion !== false) {
 				$appData['update'] = $newVersion;
 			}
 
@@ -119,6 +120,7 @@ class ApiController extends OCSController {
 					$groups = [$groups];
 				}
 			}
+
 			$appData['groups'] = $groups;
 			$appData['canUninstall'] = !$appData['active'] && $appData['removable'];
 
@@ -132,6 +134,7 @@ class ApiController extends OCSController {
 			$appData['missingMaxNextcloudVersion'] = !isset($appData['dependencies']['nextcloud']['@attributes']['max-version']);
 			$appData['isCompatible'] = $this->dependencyAnalyzer->isMarkedCompatible($appData);
 
+			/** @var array{id: string, name: string, groups: list<string>, internal: bool, isCompatible: bool, missingDependencies?: list<string>, missingMaxNextcloudVersion: bool, missingMinNextcloudVersion: bool, ...<array-key, mixed>} $appData */
 			return $appData;
 		}, $apps);
 
@@ -166,16 +169,17 @@ class ApiController extends OCSController {
 
 			$this->installer->installApp($appId);
 
-			if (count($groups) > 0) {
+			if ($groups !== []) {
 				$this->appManager->enableAppForGroups($appId, $this->getGroupList($groups));
 			} else {
 				$this->appManager->enableApp($appId);
 			}
+
 			$updateRequired = $this->appManager->isUpgradeRequired($appId);
 			return new DataResponse(['update_required' => $updateRequired]);
-		} catch (\Throwable $e) {
-			$this->logger->error('could not enable app', ['exception' => $e]);
-			throw new OCSException('could not enable app', Http::STATUS_INTERNAL_SERVER_ERROR, $e);
+		} catch (\Throwable $throwable) {
+			$this->logger->error('could not enable app', ['exception' => $throwable]);
+			throw new OCSException('could not enable app', Http::STATUS_INTERNAL_SERVER_ERROR, $throwable);
 		}
 	}
 
@@ -196,9 +200,9 @@ class ApiController extends OCSController {
 			$appId = $this->appManager->cleanAppId($appId);
 			$this->appManager->disableApp($appId);
 			return new DataResponse([]);
-		} catch (\Exception $e) {
-			$this->logger->error('could not disable app', ['exception' => $e]);
-			throw new OCSException('could not disable app', Http::STATUS_INTERNAL_SERVER_ERROR, $e);
+		} catch (\Exception $exception) {
+			$this->logger->error('could not disable app', ['exception' => $exception]);
+			throw new OCSException('could not disable app', Http::STATUS_INTERNAL_SERVER_ERROR, $exception);
 		}
 	}
 
@@ -223,6 +227,7 @@ class ApiController extends OCSController {
 			$this->appManager->clearAppsCache();
 			return new DataResponse([]);
 		}
+
 		throw new OCSException('could not remove app', Http::STATUS_INTERNAL_SERVER_ERROR);
 	}
 
@@ -247,13 +252,14 @@ class ApiController extends OCSController {
 			if ($result === false) {
 				throw new \Exception('Update failed');
 			}
-		} catch (\Exception $ex) {
+		} catch (\Exception $exception) {
 			$this->config->setSystemValue('maintenance', false);
-			throw new OCSException('could not update app', Http::STATUS_INTERNAL_SERVER_ERROR, $ex);
+			throw new OCSException('could not update app', Http::STATUS_INTERNAL_SERVER_ERROR, $exception);
 		}
 
 		return new DataResponse([]);
 	}
+
 	/**
 	 * Force enable an app.
 	 * This will override the nextcloud version requirement for an app
@@ -278,10 +284,11 @@ class ApiController extends OCSController {
 		if ($url === '') {
 			return '';
 		}
+
 		return 'https://usercontent.apps.nextcloud.com/' . base64_encode($url);
 	}
 
-	private function fetchApps() {
+	private function fetchApps(): void {
 		$appClass = new \OC_App();
 		$apps = $appClass->listAllApps();
 		foreach ($apps as $app) {
@@ -296,6 +303,7 @@ class ApiController extends OCSController {
 
 				$app['screenshot'] = $this->createProxyPreviewUrl($appScreenshot);
 			}
+
 			$this->allApps[$app['id']] = $app;
 		}
 
@@ -332,17 +340,16 @@ class ApiController extends OCSController {
 		if (empty($this->allApps)) {
 			$this->fetchApps();
 		}
+
 		return $this->allApps;
 	}
 
 	/**
 	 * Get all apps for a category from the app store
 	 *
-	 * @param string $requestedCategory
-	 * @return array
 	 * @throws \Exception
 	 */
-	private function getAppsForCategory($requestedCategory = ''): array {
+	private function getAppsForCategory(string $requestedCategory = ''): array {
 		$versionParser = new VersionParser();
 		$formattedApps = [];
 		$apps = $this->appFetcher->get();
@@ -355,6 +362,7 @@ class ApiController extends OCSController {
 						$isInCategory = true;
 					}
 				}
+
 				if (!$isInCategory) {
 					continue;
 				}
@@ -363,14 +371,17 @@ class ApiController extends OCSController {
 			if (!isset($app['releases'][0]['rawPlatformVersionSpec'])) {
 				continue;
 			}
+
 			$nextcloudVersion = $versionParser->getVersion($app['releases'][0]['rawPlatformVersionSpec']);
 			$nextcloudVersionDependencies = [];
 			if ($nextcloudVersion->getMinimumVersion() !== '') {
 				$nextcloudVersionDependencies['nextcloud']['@attributes']['min-version'] = $nextcloudVersion->getMinimumVersion();
 			}
+
 			if ($nextcloudVersion->getMaximumVersion() !== '') {
 				$nextcloudVersionDependencies['nextcloud']['@attributes']['max-version'] = $nextcloudVersion->getMaximumVersion();
 			}
+
 			$phpVersion = $versionParser->getVersion($app['releases'][0]['rawPhpVersionSpec']);
 
 			try {
@@ -384,12 +395,15 @@ class ApiController extends OCSController {
 			if ($phpVersion->getMinimumVersion() !== '') {
 				$phpDependencies['php']['@attributes']['min-version'] = $phpVersion->getMinimumVersion();
 			}
+
 			if ($phpVersion->getMaximumVersion() !== '') {
 				$phpDependencies['php']['@attributes']['max-version'] = $phpVersion->getMaximumVersion();
 			}
+
 			if (isset($app['releases'][0]['minIntSize'])) {
 				$phpDependencies['php']['@attributes']['min-int-size'] = $app['releases'][0]['minIntSize'];
 			}
+
 			$authors = '';
 			foreach ($app['authors'] as $key => $author) {
 				$authors .= $author['name'];
@@ -454,24 +468,28 @@ class ApiController extends OCSController {
 		return $formattedApps;
 	}
 
-	private function getGroupList(array $groups) {
+	/**
+	 * @param string[] $groups - The group ids to fetch
+	 * @return list<IGroup> - The list of groups matching the given group ids
+	 */
+	private function getGroupList(array $groups): array {
 		$groupManager = Server::get(IGroupManager::class);
 		$groupsList = [];
 		foreach ($groups as $group) {
 			$groupItem = $groupManager->get($group);
 			if ($groupItem instanceof IGroup) {
-				$groupsList[] = $groupManager->get($group);
+				$groupsList[] = $groupItem;
 			}
 		}
+
 		return $groupsList;
 	}
 
-	private function sortApps($a, $b) {
-		$a = (string)$a['name'];
-		$b = (string)$b['name'];
-		if ($a === $b) {
-			return 0;
-		}
-		return ($a < $b) ? -1 : 1;
+	/**
+	 * @param array{name: string, ...} $a
+	 * @param array{name: string, ...} $b
+	 */
+	private function sortApps(array $a, array $b): int {
+		return $a['name'] <=> $b['name'];
 	}
 }
