# apps/appstore/openapi.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.3",
     "info": {
-        "title": "settings",
+        "title": "appstore",
         "version": "0.0.1",
         "description": "Nextcloud Appstore",
         "license": {
@@ -47,7 +47,7 @@
         }
     },
     "paths": {
-        "/ocs/v2.php/apps/settings/api/v1/apps/categories": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/categories": {
             "get": {
                 "operationId": "api-list-categories",
                 "summary": "Get all available categories",
@@ -180,7 +180,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps": {
             "get": {
                 "operationId": "api-list-apps",
                 "summary": "Get all available apps",
@@ -236,7 +236,11 @@
                                                         "required": [
                                                             "id",
                                                             "name",
-                                                            "description"
+                                                            "groups",
+                                                            "internal",
+                                                            "isCompatible",
+                                                            "missingMaxNextcloudVersion",
+                                                            "missingMinNextcloudVersion"
                                                         ],
                                                         "properties": {
                                                             "id": {
@@ -245,8 +249,29 @@
                                                             "name": {
                                                                 "type": "string"
                                                             },
-                                                            "description": {
-                                                                "type": "string"
+                                                            "groups": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "internal": {
+                                                                "type": "boolean"
+                                                            },
+                                                            "isCompatible": {
+                                                                "type": "boolean"
+                                                            },
+                                                            "missingDependencies": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "missingMaxNextcloudVersion": {
+                                                                "type": "boolean"
+                                                            },
+                                                            "missingMinNextcloudVersion": {
+                                                                "type": "boolean"
                                                             }
                                                         }
                                                     }
@@ -317,7 +342,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps/enable": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/enable": {
             "post": {
                 "operationId": "api-enable-app",
                 "summary": "Enable one apps",
@@ -470,7 +495,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps/disable": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/disable": {
             "post": {
                 "operationId": "api-disable-app",
                 "summary": "Disable an app",
@@ -607,7 +632,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps/uninstall": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/uninstall": {
             "post": {
                 "operationId": "api-uninstall-app",
                 "summary": "Uninstall an app. This will disable the app - if needed - and then remove the app from the system",
@@ -744,7 +769,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps/update": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/update": {
             "post": {
                 "operationId": "api-update-app",
                 "summary": "Update an app",
@@ -881,7 +906,7 @@
                 }
             }
         },
-        "/ocs/v2.php/apps/settings/api/v1/apps/force": {
+        "/ocs/v2.php/apps/appstore/api/v1/apps/force": {
             "post": {
                 "operationId": "api-force",
                 "summary": "Force enable an app. This will override the nextcloud version requirement for an app",
